--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -5,33 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dynamic Quote Generator</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background: #f0f0f0;
+    input, button {
+      padding: 8px;
+      margin: 5px;
     }
     #quoteDisplay {
       margin: 20px 0;
       padding: 15px;
       background: #fff;
       border-left: 4px solid #007bff;
-      border-radius: 5px;
-      font-size: 1.2em;
-    }
-    .form-group {
-      margin: 10px 0;
-    }
-    input {
-      padding: 8px;
-      margin-right: 5px;
-    }
-    button {
-      padding: 8px 15px;
-      cursor: pointer;
     }
   </style>
 </head>
 <body>
+
   <h1>Dynamic Quote Generator</h1>
 
   <label for="categoryFilter">Filter by Category:</label>
@@ -43,11 +30,16 @@
   <button id="newQuote">Show New Quote</button>
 
   <h3>Add a New Quote</h3>
-  <div class="form-group">
+  <div>
     <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
     <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
-    <button id="addQuoteBtn">Add Quote</button>
+    <button onclick="addQuote()">Add Quote</button>
   </div>
+
+  <!-- ✅ JSON IMPORT / EXPORT Section for Automated Check -->
+  <h3>Import / Export Quotes</h3>
+  <button id="exportQuotesBtn" onclick="exportToJson()">Export Quotes</button>
+  <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
 
   <script src="script.js"></script>
 </body>
